--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -5,7 +5,13 @@
   <%= f.text_field :title %>
   <%= f.label :artist_name %>
   <%= f.text_field :artist_name %>
-  <%= f.collection_select :genre_name, Genre.all, :id, :name %>
+  <%= f.label :genre%>
+  <%= f.collection_select :genre, Genre.all, :name, :name %>
+  <%= f.label :note%>
+  <input name="song[note_ids][]">
+  <input name="song[note_ids][]">
+  <input name="song[note_ids][]">
+
 
   <br />
 
