--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -6,7 +6,7 @@
   <%= f.label :artist_name %>
   <%= f.text_field :artist_name %>
   <%= f.label :genre_id%>
-  <%= f.collection_select :genre_id, Genre.all, :id, :name %>
+  <%= f.collection_select :genre_id, Genre.all, :name, :name %>
   <%= f.label :note%>
   <input name="song[note_ids][]" id="song_notes_attributes_0_content">
   <input name="song[note_ids][]" id="song_notes_attributes_1_content">
