--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -8,9 +8,9 @@
   <%= f.label :genre_id%>
   <%= f.collection_select :genre_id, Genre.all, :id, :name %>
   <%= f.label :note%>
-  <input name="song[note_ids][]" id="song_notes_attributes_0_content">
-  <input name="song[note_ids][]" id="song_notes_attributes_1_content">
-  <input name="song[note_ids][]" id="song_notes_attributes_2_content">
+  <input name="song[note_text][]" id="song_notes_attributes_0_content">
+  <input name="song[note_text][]" id="song_notes_attributes_1_content">
+  <input name="song[note_text][]" id="song_notes_attributes_2_content">
 
   <br />
 
